# turtlewow-discord-ipc

./: .env.example  .gitignore  Cargo.toml  DiscordPresence.lua  DiscordPresence.toc  README.md  rust-toolchain.toml
.cargo/: config.toml
lua/: Config.lua  Presets.lua  Template.lua  Utils.lua  Variables.lua
scripts/: upload_assets.py
src/: discord.rs  discord_sdk.rs  lib.rs  wow.rs
tests/: test_template.lua  test_template_security.lua
