[package]
name = "discord_rpc"
version = "1.0.0"
edition = "2021"
description = "Discord Rich Presence DLL for WoW 1.12.1 (Turtle WoW)"

[lib]
crate-type = ["cdylib"]

[features]
default = ["raw-ipc"]
raw-ipc = []      # Use raw IPC named pipe (presence only, lightweight, no SDK dependency)
game-sdk = []     # Use Discord Game SDK (experimental, overlay + presence, requires discord_game_sdk.dll)

[dependencies]
# Minimal Windows API bindings -- no std overhead, just the types we need
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_Storage_FileSystem",
    "Win32_System_Pipes",
    "Win32_System_IO",
    "Win32_Security",
] }
retour = { version = "0.4.0-alpha.4", features = ["static-detour"] }

[profile.release]
opt-level = "s"      # optimize for size
lto = true           # link-time optimization
strip = true         # strip symbols
codegen-units = 1    # better optimization
panic = "abort"      # smaller binary, no unwinding
