[package]
name = "discord_rpc"
version = "1.0.0"
edition = "2021"
description = "Discord Rpc Lua Fucntions for WoW 1.12.1 (Turtle WoW)"

[lib]
crate-type = ["cdylib"]

[dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_Storage_FileSystem",
    "Win32_System_Pipes",
    "Win32_System_IO",
    "Win32_Security",
] }
retour = { version = "0.4.0-alpha.4", features = ["static-detour"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
panic = "abort"
